src/test/ui/feature-gates/feature-gate-rustc_const_unstable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-rustc_const_unstable.rs:5:1
   |
LL | #[rustc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0734`.
